<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ECEFF1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#f1f1f1"
        android:id="@+id/instrumentationLinearLayout">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#fff"
        android:elevation="1dp"
        android:id="@+id/applicationFrame">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/applicationInput"
            android:layout_gravity="left|bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="112dp"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textSize="14sp"
            android:textColor="#666666" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose"
            android:id="@+id/applicationButton"
            android:layout_gravity="right|center_vertical"
            android:textSize="16sp"
            android:layout_marginRight="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="ANDROID APPLICATION"
            android:id="@+id/applicationText"
            android:layout_gravity="left|top"
            android:padding="12dp"
            android:textSize="16sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#fff"
        android:elevation="1dp"
        android:id="@+id/sinksFrame">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sinksInput"
            android:layout_gravity="bottom|left"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="18dp"
            android:layout_marginRight="112dp"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textSize="14sp"
            android:textColor="#666666" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Browse"
            android:id="@+id/sinksButton"
            android:layout_gravity="right|center_vertical"
            android:textSize="16sp"
            android:layout_marginRight="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="SINKS"
            android:id="@+id/sinksText"
            android:layout_gravity="left|top"
            android:padding="12dp"
            android:textSize="16sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#fff"
        android:elevation="1dp"
        android:id="@+id/sourcesFrame">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="SOURCES"
            android:id="@+id/sourcesText"
            android:layout_gravity="left|top"
            android:padding="12dp"
            android:textSize="16sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sourcesInput"
            android:layout_gravity="bottom|left"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="18dp"
            android:layout_marginRight="112dp"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textSize="14sp"
            android:textColor="#666666" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Browse"
            android:id="@+id/sourcesButton"
            android:layout_gravity="right|center_vertical"
            android:textSize="16sp"
            android:layout_marginRight="8dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#fff"
        android:elevation="1dp"
        android:id="@+id/taintFrame">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="TAINT WRAPPER"
            android:id="@+id/taintText"
            android:layout_gravity="left|top"
            android:padding="12dp"
            android:textSize="16sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/taintInput"
            android:layout_gravity="bottom|left"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="18dp"
            android:layout_marginRight="112dp"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textSize="14sp"
            android:textColor="#666666" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Browse"
            android:id="@+id/taintButton"
            android:layout_gravity="right|center_vertical"
            android:textSize="16sp"
            android:layout_marginRight="8dp" />
    </FrameLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Next"
            android:id="@+id/nextActivityButton"
            android:background="#fafafa" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Clear inputs"
            android:id="@+id/clearButton"
            android:background="#FFFAFAFA" />

    </LinearLayout>

</ScrollView>